<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/header_cover_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/header_cover_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:background="@drawable/profile_circular_border_imageview"
        android:elevation="5dp"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ebca0707"
        android:elevation="4dp"
        android:paddingBottom="24dp"
        android:layout_below="@+id/header_cover_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">


        <!-- <ImageView
             android:id="@+id/add_friend"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_toLeftOf="@+id/drop_down_option_menu"
             android:src="@mipmap/ic_launcher" />-->

        <ImageView
            android:id="@+id/add_friend"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_action_overflow"
            android:onClick="showPopup"
           />

        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="76dp"
            android:text="@string/viral_android"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_profile_short_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_profile_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/android_free_tutorials_and_example"
            android:textColor="#fff"
            android:textSize="14sp" />




    </RelativeLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_layout"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_bday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="@string/android_profile_ui_design"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/profile_layout"
            android:layout_alignParentStart="true" />
    </LinearLayout>
</RelativeLayout>
